--- a/client/src/components/Cards/Card.css
+++ b/client/src/components/Cards/Card.css
@@ -110,4 +110,7 @@ button > div:nth-child(6) {
 	line-height: 60px;
 }
 
-	
+	.list-product{
+    display: flex;
+    justify-content: space-around;
+  }
